--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/assests/scss/style.scss">
 </head>
 <body>
-    
+    <main>
+        
+    </main>
 </body>
 </html>
