--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BF Firm Law</title>
+    <link rel="stylesheet" href="./assests/scss/root.css">
     <link rel="stylesheet" href="./assests/scss/style.css">
 </head>
 
@@ -30,12 +31,12 @@
                 </li>
             </ul>
         </div>
-        <div class="hero_section">
+        <div class="hero_section color_white">
             <h1>REAL ESTATE. BUSINESS. CONSTRUCTION.</h1>
-            <h2>
+            <h2 class="color_white">
                 WE
                 <span>ARE</span>
-               <span class="advocate_text">ADVOCATES</span>
+                <span class="advocate_text">ADVOCATES</span>
             </h2>
         </div>
         <div>
