--- a/index.html
+++ b/index.html
@@ -5,44 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BF Firm Law</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assests/scss/root.css">
     <link rel="stylesheet" href="./assests/scss/style.css">
 </head>
 
 <body>
-    <main class="bg_black">
-        <div class="side_nav">
-            <img src="/assests/images/icons/logo.svg" alt="logo">
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Practice Areas</a>
-                </li>
-                <li>
-                    <a href="#">News</a>
-                </li>
-                <li>
-                    <a href="#">Team</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
+    <main class="bg_black position-relative">
+        <div class="px-3 mx-auto d-flex position-relative z-3">
+            <div class="side_nav ps-5 py-5 flex-column">
+                <img src="/assests/images/icons/logo.svg" alt="logo">
+                <ul class="d-flex mt-5 ms-2 flex-column ps-0">
+                    <li>
+                        <a class="" href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Practice Areas</a>
+                    </li>
+                    <li>
+                        <a href="#">News</a>
+                    </li>
+                    <li>
+                        <a href="#">Team</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="hero_section color_white d-flex flex-column justify-content-center position-relative ps-3">
+                <h1 class="fs_sm fw-bold pt-5 text-uppercase mb-3">REAL ESTATE. BUSINESS. CONSTRUCTION.</h1>
+                <h2 class="color_white fs_8xl fw-bolder">
+                    WE
+                    <span class="d-block">ARE</span>
+                    <span class="advocate_text color_bittersweet">ADVOCATES</span>
+                </h2>
+                <a class="scroll_down position-absolute" href="#"><img src="/assests/images/header/scroll-down.svg" alt="scroll_down"></a>
+            </div>
         </div>
-        <div class="hero_section color_white">
-            <h1>REAL ESTATE. BUSINESS. CONSTRUCTION.</h1>
-            <h2 class="color_white">
-                WE
-                <span>ARE</span>
-                <span class="advocate_text">ADVOCATES</span>
-            </h2>
-        </div>
-        <div>
-
-        </div>
+        <img class="parthners position-absolute end-0 bottom-0" src="/assests/images/header/characters-home.png" alt="partners">
+        <img class="bf_bg_logo position-absolute end-0 bottom-0" src="/assests/images/header/header-bg.svg" alt="bf-logo">
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
