--- a/milad.html
+++ b/milad.html
@@ -7,19 +7,117 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assests/scss/root.css">
     <link rel="stylesheet" href="./assests/scss/milad.css">
+    <!-- bootstrap link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 
 <body>
-    <div class="bg-black mt_150">
-        <div class="milad_section">
-            <div class="d_flex">
-                <div class="ml_200 me">
-                    <p></p>
+    <div class="bg-black border_one_side_top mt_150">
+        <div class="milad_section mx-auto">
+            <div class="d-flex">
+                <div class="ml_200 me-auto">
+                    <img src="./assests/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
+                    <p class="milad_para pt-5 mt-5 text-white fs_2xl fw-bold m-0 letter_0-3 lh_100">Milad is an
+                        experienced litigator and problem solver who has
+                        represented clients in a wide variety of forums throughout New
+                        York City.</p>
+                    <p class="attorney_text text-white fw-normal pt-5 mt-2 mb-0 fs_lg lh_100">Attorney Milad Boddoohi
+                    </p>
+                    <p class="text-white mb-3 mt-0 letter_0-3 opacity_07 fs_sm fw-semibold">Partner & Co-Founder</p>
+                    <a type="sumbit" target="_blank"
+                        class="bio_button d-flex justify-content-center align-items-center fw-semibold fs_sm text-white transition_03 w-100 bg_bittersweet nowrap"
+                        href="https://bf-firm-law-html.web.app/attorney-details.html">Bio</a>
+                    <div class="d-flex my-5">
+                        <a href="https://www.linkedin.com/in/miladboddoohi/" target="_blank">
+                            <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_601_2)">
+                                    <path d="M48 0H0V48H48V0Z" fill="#FE6A5B" />
+                                    <path
+                                        d="M32.4701 14.0001H15.5301C15.3396 13.9975 15.1506 14.0324 14.9736 14.1028C14.7967 14.1733 14.6354 14.2779 14.4989 14.4107C14.3624 14.5434 14.2533 14.7018 14.1781 14.8767C14.1028 15.0517 14.0627 15.2397 14.0601 15.4301V32.5701C14.0627 32.7606 14.1028 32.9486 14.1781 33.1235C14.2533 33.2985 14.3624 33.4568 14.4989 33.5896C14.6354 33.7224 14.7967 33.827 14.9736 33.8975C15.1506 33.9679 15.3396 34.0028 15.5301 34.0001H32.4701C32.6605 34.0028 32.8496 33.9679 33.0265 33.8975C33.2034 33.827 33.3648 33.7224 33.5013 33.5896C33.6378 33.4568 33.7468 33.2985 33.8221 33.1235C33.8974 32.9486 33.9375 32.7606 33.9401 32.5701V15.4301C33.9375 15.2397 33.8974 15.0517 33.8221 14.8767C33.7468 14.7018 33.6378 14.5434 33.5013 14.4107C33.3648 14.2779 33.2034 14.1733 33.0265 14.1028C32.8496 14.0324 32.6605 13.9975 32.4701 14.0001ZM20.0901 30.7401H17.0901V21.7401H20.0901V30.7401ZM18.5901 20.4801C18.1763 20.4801 17.7795 20.3158 17.487 20.0232C17.1944 19.7307 17.0301 19.3339 17.0301 18.9201C17.0301 18.5064 17.1944 18.1096 17.487 17.8171C17.7795 17.5245 18.1763 17.3601 18.5901 17.3601C18.8098 17.3352 19.0322 17.357 19.2429 17.424C19.4536 17.4911 19.6478 17.6018 19.8127 17.7491C19.9776 17.8964 20.1096 18.0768 20.1999 18.2786C20.2903 18.4804 20.337 18.699 20.337 18.9201C20.337 19.1412 20.2903 19.3599 20.1999 19.5617C20.1096 19.7635 19.9776 19.9439 19.8127 20.0912C19.6478 20.2385 19.4536 20.3492 19.2429 20.4163C19.0322 20.4833 18.8098 20.5051 18.5901 20.4801ZM30.9101 30.7401H27.9101V25.9101C27.9101 24.7001 27.4801 23.9101 26.3901 23.9101C26.0527 23.9126 25.7242 24.0184 25.4489 24.2133C25.1735 24.4082 24.9645 24.6828 24.8501 25.0001C24.7718 25.2352 24.7379 25.4827 24.7501 25.7301V30.7301H21.7501C21.7501 30.7301 21.7501 22.5501 21.7501 21.7301H24.7501V23.0001C25.0226 22.5272 25.419 22.1377 25.8965 21.8733C26.374 21.609 26.9146 21.48 27.4601 21.5001C29.4601 21.5001 30.9101 22.7901 30.9101 25.5601V30.7401Z"
+                                        fill="white" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_601_2">
+                                        <rect width="48" height="48" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
+                        <a href="https://twitter.com/thenyattorney" target="_blank" class="mx-3">
+                            <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_601_5)">
+                                    <path d="M48 0H0V48H48V0Z" fill="#FE6A5B" />
+                                    <path
+                                        d="M34 17.8002C33.2483 18.1263 32.4534 18.3419 31.64 18.4402C32.4982 17.9275 33.1413 17.121 33.45 16.1702C32.6436 16.6503 31.7608 16.9885 30.84 17.1702C30.2245 16.5028 29.405 16.0585 28.5098 15.9071C27.6146 15.7556 26.6945 15.9056 25.8938 16.3334C25.093 16.7612 24.4569 17.4427 24.0852 18.271C23.7135 19.0994 23.6273 20.0276 23.84 20.9102C22.2094 20.8277 20.6144 20.4032 19.1587 19.6641C17.7029 18.925 16.4188 17.8879 15.39 16.6202C15.0291 17.2504 14.8395 17.964 14.84 18.6902C14.8387 19.3646 15.0042 20.0288 15.3218 20.6238C15.6393 21.2187 16.099 21.7259 16.66 22.1002C16.008 22.0825 15.3699 21.9075 14.8 21.5902V21.6402C14.8049 22.5851 15.136 23.4993 15.7373 24.2282C16.3386 24.957 17.1733 25.4559 18.1 25.6402C17.7433 25.7488 17.3729 25.806 17 25.8102C16.7419 25.8072 16.4844 25.7838 16.23 25.7402C16.4939 26.553 17.0046 27.2634 17.6911 27.7724C18.3775 28.2814 19.2056 28.5638 20.06 28.5802C18.6172 29.7155 16.8359 30.3351 15 30.3402C14.6657 30.3413 14.3317 30.3213 14 30.2802C15.8744 31.4905 18.0588 32.1329 20.29 32.1302C21.8297 32.1462 23.3571 31.8552 24.7831 31.2743C26.2091 30.6934 27.505 29.8341 28.5952 28.7467C29.6854 27.6593 30.548 26.3656 31.1326 24.9411C31.7171 23.5166 32.012 21.9899 32 20.4502C32 20.2802 32 20.1002 32 19.9202C32.7847 19.335 33.4615 18.6176 34 17.8002Z"
+                                        fill="white" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_601_5">
+                                        <rect width="48" height="48" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+
+                        </a>
+                        <a href="mailto:Milad@thebflawfirm.com">
+                            <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_601_8)">
+                                    <path d="M48 0H0V48H48V0Z" fill="#FE6A5B" />
+                                    <path d="M13.6553 18.1406V29.8692L19.5195 24.0049L13.6553 18.1406Z" fill="white" />
+                                    <path
+                                        d="M14.8203 16.9653L22.2446 24.3896C23.1822 25.3273 24.8176 25.3273 25.7552 24.3896L33.1795 16.9653H14.8203Z"
+                                        fill="white" />
+                                    <path
+                                        d="M26.9257 25.5601C26.1453 26.3414 25.1059 26.7725 24.0002 26.7725C22.8946 26.7725 21.8551 26.3414 21.0747 25.5601L20.6899 25.1753L14.8306 31.0346H33.1699L27.3106 25.1753L26.9257 25.5601Z"
+                                        fill="white" />
+                                    <path d="M28.4805 24.0049L34.3447 29.8692V18.1406L28.4805 24.0049Z" fill="white" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_601_8">
+                                        <rect width="48" height="48" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+
+                        </a>
+                    </div>
+                </div>
+                <div class="ms-auto">
+                    <img src="./assests/images/milad/founder_man.png" alt="founder man image" class="founder_man_img">
                 </div>
             </div>
         </div>
     </div>
+    <!-- Cheryl Friedlander SECTION -->
+    <div class="">
+        <div class="d-flex">
+            <div class="ms-5 ps-5">
+                <img src="./assests/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
+            </div>
+            <div class="ml_100 mt-5 pt-5">
+                <h3 class="Cheryl_para text-black letter_0-3 lh_100 fw-bold fs_2xl mb-2">
+                    Cheryl has represented a
+                    wide variety of clients in
+                    transactional matters, from
+                    individuals and small
+                    businesses to domestic and
+                    multi-national billion-
+                    dollar companies.
+                </h3>
+                <p class="pt-5 letter_0-3 text-black mb-0 fw-semibold lh_100 fs_lg">Cheryl Friedlander</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- script  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
