litigation section in progress

--- a/milad.html
+++ b/milad.html
@@ -14,6 +14,17 @@
 </head>
 
 <body>
+    <!-- litigation section  -->
+    <div class="litigation_section bg-black ">
+<div class="row litigation_main_parent">
+<div class="col-sm-7 p-0 p-sm-5 litigation_section_margin">
+<div class="">
+
+</div>
+</div>
+</div>
+    </div>
+    <!-- Milad section  -->
     <div class="bg-black border_one_side_top mt_150">
         <div class="milad_section mx-auto">
             <div class="d-flex flex-lg-row flex-column">
