litigation section in progress

--- a/Footer.html
+++ b/Footer.html
@@ -20,16 +20,16 @@
                 <div class="row align-items-center m-0 p-0 position-relative section-margin">
                     <div class="col-sm-6 animation-element bounce-down z_index_10">
                         <div class="data subject">
-                            <h3 class="letter-0-3 color_white line-height-h3 mb-0">
+                            <h3 class="letter-0-3 text-white line-height-h3 mb-0">
                                 Anything you<br />
                                 need, we are here.
                             </h3>
-                            <p class="color_white font-opacity mt-4 font-500 mw_px">
+                            <p class="text-white font-opacity mt-4 font-500 mw_px">
                                 Please reach out to us via phone, email, text, or the form
                                 here if you have any questions for us.
                             </p>
                             <div class="my-3">
-                                <p class="color_white mb-0 fw-normal mb-3">
+                                <p class="text-white mb-0 fw-normal mb-3">
                                     Boddoohi & Friedlander LLP
                                 </p>
                                 <!-- <br /> -->
@@ -46,7 +46,7 @@
                                     <span class="d-block"> Kingston, New York 12401</span>
                                 </a>
                             </div>
-                            <p class="color_white mb-0 fw-normal lh_160">
+                            <p class="text-white mb-0 fw-normal lh_160">
                                 Call or Text Us:
                             </p>
                             <a href="tel:+(347) 252 9922">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </section>
-        <footer class="bg_black">
+        <footer class="bg-black">
             <div class="container  p-0 animation-element bounce-down">
                 <div class="row m-0 p-0 position-relative subject">
                     <div class="col-sm-3 p-sm-0 desktop">
@@ -133,13 +133,13 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-wrap mt-sm-2 mt-4 pt-3 pt-sm-0 m-flex-column item-center pb-2">
-                                <p class="font-13 font-500 color_white font-opacity1 mb-0">
+                                <p class="font-13 font-500 text-white font-opacity1 mb-0">
                                     © Boddoohi & Friedlander LLP 2022.
                                 </p>
-                                <p class="font-13 font-500 color_white font-opacity1 mb-0">
+                                <p class="font-13 font-500 text-white font-opacity1 mb-0">
                                     All rights reserved.
                                 </p>
-                                <p class="font-13 font-500 color_white font-opacity1 mb-0 text-center">
+                                <p class="font-13 font-500 text-white font-opacity1 mb-0 text-center">
                                     &nbsp;Attorney Advertising: Prior results do not guarantee a
                                     similar outcome.
                                 </p>
