--- a/milad.html
+++ b/milad.html
@@ -16,13 +16,51 @@
 <body>
     <!-- litigation section  -->
     <div class="litigation_section bg-black ">
-<div class="row litigation_main_parent">
-<div class="col-sm-7 p-0 p-sm-5 litigation_section_margin">
-<div class="">
+        <div class="row litigation_main_parent">
+            <div class="col-sm-7 p-0 p-sm-5 litigation_section_margin">
+                <div class="p-sm-5 p-4 ms-sm-4">
+                    <div class="ms-sm-4">
+                        <div class="d-flex align-items-center">
+                            <div class="peach_hr"></div>
+                            <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100">
+                                We deal with
+                            </h5>
+                        </div>
+                        <h2 class="letter_0-5 text-white mt-sm-3 fw-bold lh_100 fs_5xl">
+                            Litigation
+                        </h2>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 pb-3 mb-0 letter_0-3 mt-sm-5 pt-3 text-white">
+                            Real Estate Disputes
+                        </p>
+                        <div class="gray_hr"></div>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-3 letter_0-3 text-white">
+                            Construction Defects
+                        </p>
+                        <div class="gray_hr"></div>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-3 letter_0-3 text-white">
+                            Business, Commercial, and<br>
+                            Contractual Disputes
+                        </p>
+                        <div class="gray_hr"></div>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-3 letter_0-3 text-white">
+                            Employment Disputes
+                        </p>
+                        <div class="gray_hr"></div>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-3 letter_0-3 text-white">
+                            Arbitrations/Mediations
+                        </p>
+                        <div class="gray_hr"></div>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-3 letter_0-3 text-white">
+                            Medical Malpractice <br>
+                            and Personal Injury
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-5 ">
 
-</div>
-</div>
-</div>
+            </div>
+        </div>
     </div>
     <!-- Milad section  -->
     <div class="bg-black border_one_side_top mt_150">
@@ -30,7 +68,8 @@
             <div class="d-flex flex-lg-row flex-column">
                 <div class="milad_parent_margin me-auto">
                     <img src="./assests/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
-                    <p class="milad_para pt-5 mt-sm-5 mt-lg-0 mt-xl-5 text-white fs_2xl fw-bold m-0 letter_0-3 lh_100">Milad is an
+                    <p class="milad_para pt-5 mt-sm-5 mt-lg-0 mt-xl-5 text-white fs_2xl fw-bold m-0 letter_0-3 lh_100">
+                        Milad is an
                         experienced litigator and problem solver who has
                         represented clients in a wide variety of forums throughout New
                         York City.</p>
