--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
     <title>BF Firm Law</title>
+    <meta name="title" content="BF Firm Law" />
+    <meta name="description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
+    <!-- ========================== LINK FAVICON ======================== -->
+    <!-- <link rel="shortcut icon" href="./assets/images/svg/Herzhupfal_Logo.svg" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon-16x16.png" />
+    <link rel="icon" href="./assets/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="./assets/favicons/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="./assets/favicons/android-chrome-512x512.png" /> -->
+    <!-- Open Graph / Facebook -->
+    <!-- <meta property="og:type" content="website" />
+    <meta property="og:url" content="/" />
+    <meta property="og:title" content="Herzhupfal" />
+    <meta property="og:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
+    <meta property="og:image" content="/seo_img.webp" /> -->
+
+    <!-- Twitter -->
+    <!-- <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="/" />
+    <meta property="twitter:title" content="Herzhupfal" />
+    <meta property="twitter:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
+    <meta property="twitter:image" content="/seo_img.webp" /> -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assests/scss/root.css">
@@ -12,15 +38,15 @@
 </head>
 
 <body>
-    <main class="bg_black position-relative">
+    <main class="bg-black position-relative overflow-hidden">
         <div class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3">
-            <div class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row">
-                <div class="d-md-none d-inline-block pe-3">
+            <div class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex">
+                <div class="d-md-none menu_icon d-flex pe-3">
                     <img onclick="showNav()" class="mobile-nav-icon cursor_pointer" id="navToggleIcon"
                         src="/assests/images/icons/nav-toggle.svg" alt="toggle" />
                 </div>
-                <img class="" src="/assests/images/icons/logo.svg" alt="logo">
-                <ul id="navBar" class="d-flex mt-5 ms-2 flex-column ps-0 navbar_links ">
+                <a href="#"><img class="" src="/assests/images/icons/logo.svg" alt="logo"></a>
+                <ul id="navBar" class="d-flex mt-5 md:ms-2 flex-column ps-0 navbar_links ">
                     <li>
                         <a class="" href="#">Home</a>
                     </li>
@@ -38,15 +64,15 @@
                     </li>
                 </ul>
             </div>
-            <div class="hero_section color_white d-flex flex-column justify-content-center position-relative md:ps-3">
+            <div class="hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3">
                 <h1 class="fs_sm fw-bold sm:pt-5 pt-4 text-uppercase mb-3">REAL ESTATE. BUSINESS. CONSTRUCTION.</h1>
-                <h2 class="color_white fs_8xl fw-bolder">
+                <h2 class="text-white fs_8xl fw-bolder">
                     WE
                     <span class="d-block">ARE</span>
                     <span class="advocate_text color_bittersweet">ADVOCATES</span>
                 </h2>
-                <a class="scroll_down position-absolute" href="#"><img src="/assests/images/header/scroll-down.svg"
-                        alt="scroll_down"></a>
+                <a class="scroll_down position-absolute" href="#"><img class="w-100"
+                        src="/assests/images/header/scroll-down.svg" alt="scroll_down"></a>
             </div>
         </div>
         <img class="parthners position-absolute end-0 bottom-0" src="/assests/images/header/characters-home.png"
@@ -54,6 +80,29 @@
         <img class="bf_bg_logo position-absolute end-0 bottom-0" src="/assests/images/header/header-bg.svg"
             alt="bf-logo">
     </main>
+    <div class="position-relative py-md-5">
+        <div class="custom_container container mx-auto">
+            <h2 class="advise fs_5xl text-black fw-bold mx-auto"><span class="color_bittersweet"><span class="d-block">
+                        We advise
+                    </span>
+                    clients</span> in New York
+                City and the <br>
+                Hudson Valley
+                through any
+                transaction or dispute.</h2>
+        </div>
+    </div>
+    <!-- REAL ESTATE SECTION  -->
+    <div>
+        <div class="custom_container container mx-auto row">
+<div class="col-6">
+
+</div>
+<div class="col-6">
+
+</div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
