--- a/slider.html
+++ b/slider.html
@@ -24,6 +24,11 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
   </head>
   <body>
     <div class="container relative">
+      <h2 class="fw-bold fs_8xl title-space">News</h2>
+      <p class="text-black pb-5 pt-3">
+        Developments, trends, and opinions that move us at Boddoohi &
+        Friedlander LLP, but also beyond.
+      </p>
       <div class="slider-arrow">
         <div class="slick-prev">
           <img src="./assests/images/icons/arrow-left.svg" alt="arrow-left" />
@@ -34,8 +39,8 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
       </div>
       <div class="slider">
         <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw-bold title">Another big win in the SDNY</h3>
-          <p class="fs_sm text-normal">
+          <h3 class="fs_xl fw-bold text-black">Another big win in the SDNY</h3>
+          <p class="fs_sm text-normal text-black">
             This was round two in a battle between our client, a wonderful,
             well-known, and respected international travel company, and another
             travel company over purported claims of unfair competition under New
@@ -51,37 +56,37 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
           </p>
         </div>
         <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold title">
+          <h3 class="fs_xl fw_bold text-black">
             Esopus Updates Proposed Marina Camping Rules
           </h3>
-          <p class="fs_sm text-normal">
+          <p class="fs_sm text-normal text-black">
             On December 22, 2021, the New York State Legislature passed (and
             Governing Hochul signed into law) a law exempting cooperatives from
             several provisions of the HSTPA
           </p>
         </div>
         <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold title">
+          <h3 class="fs_xl fw_bold text-black">
             Esopus Seeks to Revise Zoning for Marina RV Lodging
           </h3>
-          <p class="fs_sm text-normal">
+          <p class="fs_sm text-normal text-black">
             Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
             vs. Castaways Marina
           </p>
         </div>
         <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold title">Another big win in the SDNY</h3>
-          <p class="fs_sm text-normal">
+          <h3 class="fs_xl fw_bold text-black">Another big win in the SDNY</h3>
+          <p class="fs_sm text-normal text-black">
             On December 22, 2021, the New York State Legislature passed (and
             Governing Hochul signed into law) a law exempting cooperatives from
             several provisions of the HSTPA
           </p>
         </div>
         <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold title">
+          <h3 class="fs_xl fw_bold text-black">
             Esopus Seeks to Revise Zoning for Marina RV Lodging
           </h3>
-          <p class="fs_sm text-normal">
+          <p class="fs_sm text-normal text-black">
             Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
             vs. Castaways Marina
           </p>
