--- a/milad.html
+++ b/milad.html
@@ -16,9 +16,9 @@
 <body>
     <!-- litigation section  -->
     <div class="litigation_section bg-black ">
-        <div class="row litigation_main_parent">
-            <div class="col-sm-7 p-0 p-sm-5 litigation_section_margin">
-                <div class="p-sm-5 p-4 ms-sm-4">
+        <div class="row flex-sm-row flex-column litigation_main_parent ">
+            <div class="col-md-7 col-sm-9 col-12 p-0 p-md-5 litigation_section_margin">
+                <div class="p-md-5 m-4 p-2">
                     <div class="ms-sm-4">
                         <div class="d-flex align-items-center">
                             <div class="peach_hr"></div>
@@ -26,7 +26,7 @@
                                 We deal with
                             </h5>
                         </div>
-                        <h2 class="letter_0-5 text-white mt-sm-3 fw-bold lh_100 fs_5xl">
+                        <h2 class="letter_0-5 text-white mt-3 fw-bold lh_100 fs_5xl">
                             Litigation
                         </h2>
                         <p class="opacity_07 fs_md fw-semibold lh_100 pb-3 mb-0 letter_0-3 mt-sm-5 pt-3 text-white">
@@ -57,8 +57,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-5 ">
-
+            <div class="col-md-5 col-sm-3">
+                <div class="litigation_section_img">
+                    <img src="./assests/images/litigation/hammer.png" alt="hammer image" class="hammer_img">
+                </div>
             </div>
         </div>
     </div>
