--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="./assests/scss/milad.css">
     <link rel="stylesheet" href="./assests/scss/root.css">
     <link rel="stylesheet" href="./assests/scss/style.css">
+
 </head>
 
 <body>
@@ -93,14 +96,50 @@
         </div>
     </div>
     <!-- REAL ESTATE SECTION  -->
-    <div>
-        <div class="custom_container container mx-auto row">
-<div class="col-6">
-
-</div>
-<div class="col-6">
-
-</div>
+    <div class="bg-black">
+        <div
+            class="real_estate mx-auto row px-lg-0 pe-sm-3 bg-white align-items-center flex-wrap-reverse justify-content-center">
+            <div class="col-sm-6 px-sm-0 h-100 estate_building">
+                <img class="w-100 object-fit-contain h-100" src="/assests/images/real-estate/deal-bg.svg"
+                    alt="real-estate">
+            </div>
+            <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3">
+                <div class="p-xl-5 p-lg-4 pe-md-4 ms-lg-4 real_estate_deals">
+                    <div class="ms-sm-4">
+                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100">
+                            We deal with
+                        </h5>
+                        <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
+                            Real Estate
+                        </h2>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 mt-4 letter_0-3 text-black">
+                            Purchases and Sales of Commercial and
+                            Residential Properties
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            General Counseling to Cooperatives and
+                            Condominiums
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            Leasing
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            Syndication
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            Financing
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            Loan Work-Outs
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
