--- a/slider.html
+++ b/slider.html
@@ -24,8 +24,8 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
   </head>
   <body>
     <div class="container relative">
-      <h2 class="fw-bold fs_8xl title-space">News</h2>
-      <p class="text-black pb-5 pt-3">
+      <h2 class="fw-bold text-space fs_8xl text-space">News</h2>
+      <p class="text-black mb-0 pb-3 pt-2 text-space">
         Developments, trends, and opinions that move us at Boddoohi &
         Friedlander LLP, but also beyond.
       </p>
@@ -37,10 +37,12 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
           <img src="./assests/images/icons/arrow-right.svg" alt="arrow-right" />
         </div>
       </div>
-      <div class="slider">
-        <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw-bold text-black">Another big win in the SDNY</h3>
-          <p class="fs_sm text-normal text-black">
+      <div class="slider my-5">
+        <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+          <h3 class="fs_xl fw-bold text-space text-black mb-0">
+            Another big win in the SDNY
+          </h3>
+          <p class="fs_sm text-normal text-black mb-0">
             This was round two in a battle between our client, a wonderful,
             well-known, and respected international travel company, and another
             travel company over purported claims of unfair competition under New
@@ -55,38 +57,40 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             prejudice, and later awarded us costs and attorneys’ fees.
           </p>
         </div>
-        <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold text-black">
+        <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+          <h3 class="fs_xl fw_bold text-space text-black mb-0">
             Esopus Updates Proposed Marina Camping Rules
           </h3>
-          <p class="fs_sm text-normal text-black">
+          <p class="fs_sm text-normal text-black mb-0">
             On December 22, 2021, the New York State Legislature passed (and
             Governing Hochul signed into law) a law exempting cooperatives from
             several provisions of the HSTPA
           </p>
         </div>
-        <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold text-black">
+        <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+          <h3 class="fs_xl fw_bold text-space text-black mb-0">
             Esopus Seeks to Revise Zoning for Marina RV Lodging
           </h3>
-          <p class="fs_sm text-normal text-black">
+          <p class="fs_sm text-normal text-black mb-0">
             Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
             vs. Castaways Marina
           </p>
         </div>
-        <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold text-black">Another big win in the SDNY</h3>
-          <p class="fs_sm text-normal text-black">
+        <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+          <h3 class="fs_xl fw_bold text-space text-black mb-0">
+            Another big win in the SDNY
+          </h3>
+          <p class="fs_sm text-normal text-black mb-0">
             On December 22, 2021, the New York State Legislature passed (and
             Governing Hochul signed into law) a law exempting cooperatives from
             several provisions of the HSTPA
           </p>
         </div>
-        <div class="slide-card d-flex justify-content-between">
-          <h3 class="fs_xl fw_bold text-black">
+        <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+          <h3 class="fs_xl fw_bold text-space text-black mb-0">
             Esopus Seeks to Revise Zoning for Marina RV Lodging
           </h3>
-          <p class="fs_sm text-normal text-black">
+          <p class="fs_sm text-normal text-black mb-0">
             Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
             vs. Castaways Marina
           </p>
