--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </head>
 
 <body>
+    <!-- hero section  -->
     <main class="bg-black position-relative overflow-hidden">
         <div class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3">
             <div class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex">
@@ -83,6 +84,7 @@
         <img class="bf_bg_logo position-absolute end-0 bottom-0" src="/assests/images/header/header-bg.svg"
             alt="bf-logo">
     </main>
+    <!-- advise section  -->
     <div class="position-relative py-md-5">
         <div class="custom_container container mx-auto">
             <h2 class="advise fs_5xl text-black fw-bold mx-auto"><span class="color_bittersweet"><span class="d-block">
@@ -180,6 +182,44 @@
             <div class="col-lg-5 col-sm-6 px-sm-0 h-100 dollor">
                 <img class="w-100 object-fit-contain h-100"
                     src="/assests/images/business-and-corporate/business-and-corporate.svg" alt="real-estate">
+            </div>
+        </div>
+    </div>
+    <!-- Construction section  -->
+    <div class="pt-5">
+        <div class="construction mx-auto pt-md-4 pt-0 row px-lg-0 pe-sm-3 bg-white flex-wrap-reverse justify-content-center">
+            <div class="col-sm-6 px-sm-0 h-100 construction_crane">
+                <img class="w-100 object-fit-contain h-100" src="/assests/images/construction/construction-bg.png"
+                    alt="real-estate">
+            </div>
+            <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3">
+                <div class="py-xl-5 py-lg-4 pe-xl-5 pe-lg-4 pe-md-4 ms-lg-4 construction_deals">
+                    <div class="ms-sm-4">
+                        <h5 class="letter_03 text-uppercase color_bittersweet ms-2 mb-0 fs_sm fw-bold lh_100">
+                            We deal with
+                        </h5>
+                        <h2 class="letter_0-5 text-black mt-sm-3 mb-2 fw-bold lh_100 fs_5xl">
+                            Construction
+                        </h2>
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 mt-4 letter_0-3 text-black">
+                            AIA Contracts
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            Construction and Development
+                            Agreements
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            Access, License Agreements, and
+                            RPAPL 881s
+                        </p>
+                        <hr class="my-md-3 my-2">
+                        <p class="opacity_07 fs_md fw-semibold lh_100 mb-0 letter_0-3 text-black">
+                            Mechanic's Liens
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
