--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <link rel="apple-touch-icon" sizes="192x192" href="./assets/favicons/android-chrome-192x192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="./assets/favicons/android-chrome-512x512.png" /> -->
     <!-- Open Graph / Facebook -->
-    <!-- <meta property="og:type" content="website" />
-    <meta property="og:url" content="/" />
-    <meta property="og:title" content="Herzhupfal" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content=" https://bf-law-firm.vercel.app" />
+    <meta property="og:title" content="BF Firm Law" />
     <meta property="og:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
-    <meta property="og:image" content="/seo_img.webp" /> -->
+    <meta property="og:image" content=" https://bf-law-firm.vercel.app/seo_img.webp" />
 
     <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="/" />
-    <meta property="twitter:title" content="Herzhupfal" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content=" https://bf-law-firm.vercel.app" />
+    <meta property="twitter:title" content="BF Firm Law" />
     <meta property="twitter:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
-    <meta property="twitter:image" content="/seo_img.webp" /> -->
+    <meta property="twitter:image" content=" https://bf-law-firm.vercel.app/seo_img.webp" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -187,7 +187,8 @@
     </div>
     <!-- Construction section  -->
     <div class="pt-5">
-        <div class="construction mx-auto pt-md-4 pt-0 row px-lg-0 pe-sm-3 bg-white flex-wrap-reverse justify-content-center">
+        <div
+            class="construction mx-auto pt-md-4 pt-0 row px-lg-0 pe-sm-3 bg-white flex-wrap-reverse justify-content-center">
             <div class="col-sm-6 px-sm-0 h-100 construction_crane">
                 <img class="w-100 object-fit-contain h-100" src="/assests/images/construction/construction-bg.png"
                     alt="real-estate">
