footer section complete

--- a/milad.html
+++ b/milad.html
@@ -306,7 +306,8 @@
     <footer class="bg-black">
         <div class="row position-relative">
             <div class="image_col p-sm-0 ">
-                <img src="./assests/images/icons/footer-img.svg" alt="footer image" class="d-sm-block d-none pointer_event_none">
+                <img src="./assests/images/icons/footer-img.svg" alt="footer image"
+                    class="d-sm-block d-none pointer_event_none">
             </div>
             <div class="footer_link_col mt-sm-5 pb-sm-0 pb-5 padding_xl_footer_col">
                 <div class="mt-sm-5 pt-sm-5">
@@ -342,7 +343,8 @@
                     </div>
                     <hr class="footer_gray_hr bg-white w-100 my-4 mt-md-5">
                     <div class="d-flex mt-2 item-center justify-content-center justify-content-md-start">
-                        <div class="d-flex flex-sm-row flex-column justify-content-center justify-content-sm-start align-items-center gap-sm-0 gap-2">
+                        <div
+                            class="d-flex flex-sm-row flex-column justify-content-center justify-content-sm-start align-items-center gap-sm-0 gap-2">
                             <a class=" fs_sm fw-semibold text-white" href="#">Back to Top</a>
                             <a href="./index.html#practice" class="ms-sm-5  fs_sm fw-semibold text-white">Practice
                                 Areas</a>
@@ -376,14 +378,17 @@
                             </a>
                         </div>
                     </div>
-                    <div class="d-flex flex-md-row flex-column justify-content-center mt-sm-2 mt-4 pt-3 pt-sm-0 item-center pb-2">
+                    <div
+                        class="d-flex flex-md-row flex-column justify-content-center mt-sm-2 mt-4 pt-3 pt-sm-0 item-center pb-2">
                         <p class="opacity_05 text-white text-md-start text-center fw-normal fs_xsm lh_100 mb-0">
                             © Boddoohi &amp; Friedlander LLP 2022.
                         </p>
-                        <p class="opacity_05 text-white text-md-start text-center my-md-0 my-2 fw-normal fs_xsm lh_100 ">
+                        <p
+                            class="opacity_05 text-white text-md-start text-center my-md-0 my-2 fw-normal fs_xsm lh_100 ">
                             All rights reserved.
                         </p>
-                        <p class="opacity_05 text-white text-md-start text-center fw-normal fs_xsm lh_100 mb-0 text-center">
+                        <p
+                            class="opacity_05 text-white text-md-start text-center fw-normal fs_xsm lh_100 mb-0 text-center">
                             &nbsp;Attorney Advertising: Prior results do not guarantee a
                             similar outcome.
                         </p>
@@ -397,7 +402,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
