--- a/milad.html
+++ b/milad.html
@@ -10,7 +10,6 @@
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -79,7 +78,7 @@
                         Boddoohi
                     </p>
                     <p class="text-white mb-3 mt-0 letter_0-3 opacity_07 fs_sm fw-semibold">Partner & Co-Founder</p>
-                    <a type="sumbit" target="_blank"
+                    <a type="sumbit" target="_blank" rel="noopener noreferrer"
                         class="bio_button d-flex justify-content-center align-items-center fw-semibold fs_sm text-white transition_03 w-100 bg_bittersweet nowrap"
                         href="https://bf-firm-law-html.web.app/attorney-details.html">Bio</a>
                     <div class="d-flex my-sm-5 my-4">
@@ -118,7 +117,7 @@
                             </svg>
 
                         </a>
-                        <a href="mailto:Milad@thebflawfirm.com" rel="noopener noreferrer" class="social_icons">
+                        <a href="mailto:Milad@thebflawfirm.com" class="social_icons">
                             <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_601_8)">
@@ -165,7 +164,7 @@
             </h3>
             <p class="pt-sm-5 pt-4 letter_0-3 text-black mb-0 fw-semibold lh_100 fs_lg">Cheryl Friedlander</p>
             <p class="letter_0-3 opacity_07 mb-3 fs_sm fw-semibold lh_100 ">Partner & Co-Founder</p>
-            <a type="sumbit" target="_blank"
+            <a type="sumbit" target="_blank" rel="noopener noreferrer"
                 class="bio_button d-flex justify-content-center align-items-center fw-semibold fs_sm text-white transition_03 w-100 bg_bittersweet nowrap"
                 href="https://bf-firm-law-html.web.app/attorney-details.html">Bio</a>
             <div class="d-flex my-sm-5 my-4">
@@ -202,7 +201,7 @@
                     </svg>
 
                 </a>
-                <a href="mailto:Milad@thebflawfirm.com" rel="noopener noreferrer" class="social_icons">
+                <a href="mailto:Milad@thebflawfirm.com" class="social_icons">
                     <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_601_8)">
                             <path class="hover_svg" d="M48 0H0V48H48V0Z" fill="#FE6A5B" />
@@ -245,14 +244,14 @@
                             Boddoohi &amp; Friedlander LLP
                         </p>
                         <!-- <br /> -->
-                        <a href="https://goo.gl/maps/MhVbDPtmKzWAweFJ6" target="_blank"
+                        <a href="https://goo.gl/maps/MhVbDPtmKzWAweFJ6" target="_blank" rel="noopener noreferrer"
                             class="text-white fs_sm fw-normal anything_link_text_hover transition_03">
                             <span class="d-block"> New York City Office:</span>
                             <span class="d-block"> 110 East 25th Street</span>
                             <span class="d-block"> New York, New York 10010</span>
                         </a>
                         <!-- <br /> -->
-                        <a href="https://maps.app.goo.gl/YNKQEtyfB5RiSHks6" target="_blank"
+                        <a href="https://maps.app.goo.gl/YNKQEtyfB5RiSHks6" target="_blank" rel="noopener noreferrer"
                             class="text-white fs_sm fw-normal mt-3 d-block anything_link_text_hover transition_03">
                             <span class="d-block"> Hudson Valley Office:</span>
                             <span class="d-block"> 291 Wall Street, 4th Floor</span>
@@ -268,7 +267,7 @@
                             (347) 252 9922
                         </p>
                     </a>
-                    <a href="mailto:hello@thebflawfirm.com">
+                    <a href="mailto:hello@thebflawfirm.com" >
                         <p class="text-white fw-normal lh_160 fs_sm mb-0 anything_link_text_hover transition_03">
                             hello@thebflawfirm.com
                         </p>
@@ -315,7 +314,7 @@
                         <div>
                             <a href="index.html"><img class="footer_logo" src="./assests/images/icons/logo.svg" /></a>
                             <div class="social_icons_margin d-flex d-md-none justify-content-center mt-md-0 mt-4">
-                                <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank">
+                                <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank" rel="noopener noreferrer">
                                     <svg class="" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -324,7 +323,7 @@
                                     </svg>
                                 </a>
 
-                                <a href="https://www.instagram.com/thebflawfirm/" target="_blank">
+                                <a href="https://www.instagram.com/thebflawfirm/" target="_blank" rel="noopener noreferrer">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path class="transition_03s"
@@ -353,7 +352,7 @@
                             <a href="#contact" class="ms-sm-5  fs_sm fw-semibold text-white">Contact</a>
                         </div>
                         <div class="social_icons_margin d-md-flex d-none mt-sm-0 mt-4">
-                            <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank">
+                            <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank" rel="noopener noreferrer">
                                 <svg class="" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -362,7 +361,7 @@
                                 </svg>
                             </a>
 
-                            <a href="https://www.instagram.com/thebflawfirm/" target="_blank">
+                            <a href="https://www.instagram.com/thebflawfirm/" target="_blank" rel="noopener noreferrer">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path class="transition_03s"
