--- a/milad.html
+++ b/milad.html
@@ -15,7 +15,7 @@
 <body>
     <!-- litigation section  -->
     <div class="litigation_section bg-black ">
-        <div class="row flex-sm-row flex-column litigation_main_parent ">
+        <div class="row flex-sm-row flex-column litigation_main_parent max_w_1440">
             <div class="col-md-7 col-sm-9 col-12 p-0 p-md-5 litigation_section_margin">
                 <div class="p-md-5 m-4 p-2">
                     <div class="ms-sm-4">
@@ -65,7 +65,7 @@
     </div>
     <!-- Milad section  -->
     <div class="bg-black border_one_side_top mt_150">
-        <div class="milad_section mx-auto">
+        <div class="milad_section mx-auto max_w_1440">
             <div class="d-flex flex-lg-row flex-column">
                 <div class="milad_parent_margin me-auto">
                     <img src="./assests/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
@@ -148,7 +148,7 @@
         </div>
     </div>
     <!-- Cheryl Friedlander SECTION -->
-    <div class="d-flex flex-lg-row flex-column-reverse">
+    <div class="d-flex flex-lg-row flex-column-reverse max_w_1440">
         <div class="ms-sm-5 ps-sm-5 d-flex justify-content-end justify-content-lg-start">
             <img src="./assests/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
         </div>
@@ -303,7 +303,7 @@
     </div>
     <!-- footer section  -->
     <footer class="bg-black">
-        <div class="row position-relative">
+        <div class="row position-relative max_w_1440">
             <div class="image_col p-sm-0 ">
                 <img src="./assests/images/icons/footer-img.svg" alt="footer image"
                     class="d-sm-block d-none pointer_event_none">
