footer text changes

--- a/milad.html
+++ b/milad.html
@@ -378,7 +378,7 @@
                         </div>
                     </div>
                     <div
-                        class="d-flex flex-md-row flex-column justify-content-center mt-sm-2 mt-4 pt-3 pt-sm-0 item-center pb-2">
+                        class="d-flex flex-md-row flex-column justify-content-center justify-content-sm-start mt-sm-2 mt-4 pt-3 pt-sm-0 item-center pb-2">
                         <p class="opacity_05 text-white text-md-start text-center fw-normal fs_xsm lh_100 mb-0">
                             © Boddoohi &amp; Friedlander LLP 2022.
                         </p>
