--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
     <meta name="title" content="BF Firm Law" />
     <meta name="description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
     <!-- ========================== LINK FAVICON ======================== -->
-    <!-- <link rel="shortcut icon" href="./assets/images/svg/Herzhupfal_Logo.svg" type="image/x-icon">
-    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon-16x16.png" />
-    <link rel="icon" href="./assets/favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicons/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="./assets/favicons/android-chrome-192x192.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="./assets/favicons/android-chrome-512x512.png" /> -->
+    <link rel="shortcut icon" href="/assests/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="/assests/favicon-16x16.png" />
+    <link rel="icon" href="/assests/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/assests/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assests/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assests/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="/assests/android-chrome-256x256.png" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content=" https://bf-law-firm.vercel.app" />
     <meta property="og:title" content="BF Firm Law" />
     <meta property="og:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
-    <meta property="og:image" content=" https://bf-law-firm.vercel.app/seo_img.webp" />
+    <meta property="og:image" content=" https://bf-law-firm.vercel.app/se_img.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content=" https://bf-law-firm.vercel.app" />
     <meta property="twitter:title" content="BF Firm Law" />
     <meta property="twitter:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
-    <meta property="twitter:image" content=" https://bf-law-firm.vercel.app/seo_img.webp" />
+    <meta property="twitter:image" content=" https://bf-law-firm.vercel.app/se_img.webp" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
