footer logo alt added

--- a/milad.html
+++ b/milad.html
@@ -312,7 +312,7 @@
                 <div class="mt-sm-5 pt-sm-5">
                     <div class="d-flex justify-content-center justify-content-md-start">
                         <div>
-                            <a href="index.html"><img class="footer_logo" src="./assests/images/icons/logo.svg" /></a>
+                            <a href="index.html"><img class="footer_logo" src="./assests/images/icons/logo.svg" alt="logo" /></a>
                             <div class="social_icons_margin d-flex d-md-none justify-content-center mt-md-0 mt-4">
                                 <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank" rel="noopener noreferrer">
                                     <svg class="" width="24" height="24" viewBox="0 0 24 24" fill="none"
