--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <meta property="twitter:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
     <meta property="twitter:image" content=" https://bf-law-firm.vercel.app/se_img.webp" />
 
+    <!-- Bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- custum css links  -->
     <link rel="stylesheet" href="./assests/scss/milad.css">
     <link rel="stylesheet" href="./assests/scss/root.css">
     <link rel="stylesheet" href="./assests/scss/style.css">
@@ -522,7 +524,8 @@
                 <div class="mt-sm-5 pt-sm-5">
                     <div class="d-flex justify-content-center justify-content-md-start">
                         <div>
-                            <a href="index.html"><img class="footer_logo" src="./assests/images/icons/logo.svg" alt="logo" /></a>
+                            <a href="index.html"><img class="footer_logo" src="./assests/images/icons/logo.svg"
+                                    alt="logo" /></a>
                             <div class="social_icons_margin d-flex d-md-none justify-content-center mt-md-0 mt-4">
                                 <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank"
                                     rel="noopener noreferrer">
